# opengl_hello_world

./: .gitmodules  CMakeLists.txt
src/: main.cpp
